--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "~18.2.14",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-paper": "^5.10.4",
@@ -23,7 +24,8 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
