--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "~18.2.14",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "jwt-decode": "^3.1.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.4",
@@ -21,10 +26,13 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.72.2",
     "tailwindcss": "3.3.2"
   },
   "private": true
