--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.4",
     "jwt-decode": "^3.1.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -28,7 +29,8 @@
     "react-native-screens": "~3.22.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
