--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-toast-message": "^2.1.6",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "typescript": "^5.1.3",
